--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -47,33 +47,34 @@ jobs:
     #    python3  manage.py test home
     
           
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build    
-  #   name: deploy
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build    
+    name: deploy
     
    
     
-  #   steps:
-  #   - name: executing remote ssh commands using password
-  #     uses: appleboy/ssh-action@v0.1.6
-  #     with:
-  #       host: ${{ secrets.DO_IP }}
-  #       username: ${{ secrets.DO_USER }}
-  #       key: ${{ secrets.DO_KEY }}
-  #       script: |
-  #         mkdir -p ~/app
-  #         mkdir -p ~/app/src
-  #         cd ~/app
-  #         source venv/bin/activate
+    steps:
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@v0.1.6
+      with:
+        host: ${{ secrets.DO_IP }}
+        username: ${{ secrets.DO_USER }}
+        key: ${{ secrets.DO_KEY }}
+        script: |
+          # mkdir -p ~/app
+          whoami
+          # mkdir -p ~/app/src
+          # cd ~/app
+          # source venv/bin/activate
           
-  #         cd ~/app/src
-  #         #git stash
-  #         #git stash drop
-  #         git fetch          
-  #         git reset --hard origin/main
+          # cd ~/app/src
+          #git stash
+          #git stash drop
+          # git fetch          
+          # git reset --hard origin/main
               
-  #         #git pull origin main
+          #git pull origin main
        
 
 
