--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,14 +50,19 @@ jobs:
     runs-on: self-hosted
     needs: build
     name: deploy
-
-
+    
+    strategy:
+      max-parallel: 2
+      matrix:
+        python-version: [3.10.12]
+        
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.10.12
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
       with:
-        python-version: 3.10.12
+        python-version: ${{ matrix.python-version }}
+
 
     - name: Create Vitrual_Env & Install Dependencies
       run: |
